fix(10.22): resolve code review issues — SVG support, cache eviction, test DB state
Code review fixes (3H + 3M issues):

H1: Enforce content-type allowlist in generateUploadUrl (throws 400 for invalid types)
H2: Rewrite integration test with real service + @MockitoBean S3 — DB state assertions
H3: Add delete error handling in EventSettingsTab (teaserRemoveError state + Alert)

M1: Replace separate count+maxOrder queries with findByEventCodeForUpdate (@Lock PESSIMISTIC_WRITE)
    to prevent race condition when concurrent confirms target the same event
M2: Add GET /events/{eventCode} teaserImages integration tests (sort order + empty case)
M3: Fix section key: teaser-\${img.id} → teaser-image-\${img.id} in usePresentationSections

L1: Add isArchived to delete button disabled prop

Additional: SVG image support (image/svg+xml added to ALLOWED_TYPES, resolveExtension,
and frontend file input accept attribute)

Bug: Add @CacheEvict on confirmUpload and deleteTeaserImage — without eviction the
event cache served stale teaserImages:[] after a successful confirm

Tests: 12/12 service unit tests + 9/9 controller integration tests GREEN
Type-check: zero errors

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>